--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 <body class="mat-typography">
-    <app-root>Loading...
-        <mat-progress-bar mode="buffer"></mat-progress-bar>
+
+    <app-root>
+        <!-- <i class="fa fa-sync fa-spin fa-8x fa-fw"></i> -->
+        <i class="fas fa-cog fa-spin fa-2x fa-fw loading"></i>
+        <i class="fas fa-cog fa-spin spin-reverse fa-2x"></i> <br>
+        <i class="fas fa-cog fa-spin fa-2x loading1"></i>
     </app-root>
 
 </body>
